Converted all bottoms images from png to jpg.

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -54,7 +54,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 1</span>
-				<img src="img/Hunter.png" alt="">
+				<img src="img/Hunter.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black addProduct"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -70,7 +70,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 2</span>
-				<img src="img/susanoo.png" alt="">
+				<img src="img/susanoo.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -87,7 +87,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 3</span>
-				<img src="img/Curse_King.png" alt="">
+				<img src="img/Curse_King.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -104,7 +104,7 @@
 		<div class= "flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 4</span>
-				<img src="img/Skull_Pants.png" alt="">
+				<img src="img/Skull_Pants.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -121,7 +121,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 5</span>
-				<img src="img/Smiley.png" alt="">
+				<img src="img/Smiley.jpg" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -138,7 +138,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 6</span>
-				<img src="img/Spider.png" alt="">
+				<img src="img/Spider.jpg" alt="">
 				<form action="/cart/addProduct" method="POST" onsubmit="addAlert()">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
