--- a/views/product.ejs
+++ b/views/product.ejs
@@ -22,9 +22,9 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="support">Support</a></li>
+                    <li><a href="/support">Support</a></li>
                     <li><a href="#" class="shopping-cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
-                    <li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
+                    <li><a href="/signup"><i class="fa-regular fa-user"></i></a></li>
                 </ul>
             </nav>
         </div>
