--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
+/******************************************
+/* RESET
+/*******************************************/
+
+
+
 
 /* Box Model Hack */
 * {
