--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -14,13 +14,15 @@
 		<link rel="stylesheet" href="/css/loader.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
+    
+    <body class="base">
 
     <section class="navbar">
         <div class="container flex">
             <h1 class="logo">Character Select</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="support">Support</a></li>
                     <li><a href="#" class="shopping-cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
                     <li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
@@ -49,5 +51,5 @@
     </nav>
 
     <h1>Checkout Page</h1>
-
-	<body>
+	<script type="text/javascript" src="/js/main.js"></script>
+    </body>
