--- a/views/product.ejs
+++ b/views/product.ejs
@@ -46,7 +46,7 @@
                  <li><span>No Armor Equipped...</span></li>
             <% } %>
         </ul>
-        <div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
+        <div class = "checkout"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
     </nav>
 
     <section class="product-single">
