Removed commented out code from checkout controller. Fixed add alert not sliding out on click. Checkout button in mini cart now conditionally renders based on there being a logged in user or not. If there is a logged in user there will be a checkout button, otherwise there will be a signup button.

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -46,7 +46,12 @@
                  <li><span>No Armor Equipped...</span></li>
             <% } %>
         </ul>
-        <div class = "checkout"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
+        
+        <% if(user._id) { %>
+			<div class = "checkout"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
+		<%} else {%>
+			<div class = "checkout"><a href="/signup"><button class="btn btn-pushable btn-pushable--black">Please Signup</button></a></div>
+		<% } %>
     </nav>
 
     <section class="product-single">
