--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,11 @@
 					 <li><span>No Armor Equipped...</span></li>
 				<% } %>
 			</ul>
-			<div class ="checkout"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
+			<% if(user._id) { %>
+				<div class = "checkout"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
+			<%} else {%>
+				<div class = "checkout"><a href="/signup"><button class="btn btn-pushable btn-pushable--black">Please Signup</button></a></div>
+			<% } %>
 		</nav>
 
 		<!--Selections-->
