Added some margins to improve styling on bottoms page to look more consistent. Changed Please signup button to simply Signup for styling purposes.

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -59,9 +59,9 @@
 		<% bottoms.forEach(el => { %>
 			<div class="flex">
 				<section class="products flex">
-			 		<span><%= el.name %></span>
+			 		<span class="bottom-name name"><%= el.name %></span>
 		 			<a href="/product/<%= el._id %>"><img src="<%= el.image %>" alt=""></a>
-		 			<form action="/cart/addProduct" method="POST">
+		 			<form action="/cart/addProduct" method="POST" class="bottom-form">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black addProduct" type="submit"> Add To Cart </button>
 					<input type="hidden" name="name" value="<%= el.name %>">
 					<select name="size" id="size" required>
