--- a/public/css/style.css
+++ b/public/css/style.css
@@ -365,6 +365,14 @@ footer {
      flex-wrap: wrap;
  }
 
+ .products .bottom-name {
+     margin-bottom: 20px;
+}
+
+.bottom-form {
+     margin-top: 20px;
+}
+
  .products img {
      width: 100%;
      height: 100%;
@@ -459,6 +467,7 @@ footer {
 .product-name {
      white-space: nowrap;
 }
+
 
 /******************************************
 /* Responsive Design
