Accredited designs on both tops and bottoms page.

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -85,6 +85,10 @@
 		</div>
 		
 		<% } %>
+
+		<footer id="footer" class="footer flex">
+			<p>Product designs are supplied by respective creators on pinterest</p>
+		</footer>
 	
 	<script type="text/javascript" src="/js/main.js"></script>
 </body>
