--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -84,6 +84,10 @@
 	</div>
 	
 	<% } %>
+
+	<footer id="footer" class="footer flex">
+		<p>Product designs are supplied by respective titles of Nintendo</p>
+	</footer>
 	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
