Changed please signup button to signup. Added simple text to checkout page.

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -47,9 +47,8 @@
                  <li><span>No Armor Equipped...</span></li>
             <% } %>
         </ul>
-        <div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
     </nav>
 
-    <h1>Checkout Page</h1>
+    <h2 class="flex">This would normally be the part where you pay...</h2>
 	<script type="text/javascript" src="/js/main.js"></script>
     </body>
