--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -49,7 +49,7 @@
 		<% if(user._id) { %>
 			<div class = "checkout"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
 		<%} else {%>
-			<div class = "checkout"><a href="/signup"><button class="btn btn-pushable btn-pushable--black">Please Signup</button></a></div>
+			<div class = "checkout"><a href="/signup"><button class="btn btn-pushable btn-pushable--black">Signup</button></a></div>
 		<% } %>
 	</nav>
 
