Changed default on size form from none to --size--. Implemented new hyperlink that takes user back to home page on logo on all pages. aligned size text within form to be centered.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -383,6 +383,10 @@ header {
      margin-left: 25%;
  }
 
+ #size option {
+     text-align: center;
+ }
+
  .container .flex {
      align-items: flex-start;
  }
