--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -17,7 +17,7 @@
 	<!--Navigation--> 
 	<section class="navbar">
 		<div class="container flex">
-			<h1 class="logo">Character Select</h1>
+			<a href="/"><h1 class="logo">Character Select</h1></a>
 			<nav>
 				<ul>
 					<li><a href="/">Home</a></li>
@@ -65,7 +65,7 @@
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black addProduct" type="submit"> Add To Cart </button>
 					<input type="hidden" name="name" value="<%= el.name %>">
 					<select name="size" id="size" required>
-						<option value="">None</option>
+						<option value="">--Size--</option>
 						<option value="small">Small</option>
 						<option value="medium">Medium</option>
 						<option value="large">Large</option>
