--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -19,7 +19,7 @@
 
     <section class="navbar">
         <div class="container flex">
-            <h1 class="logo">Character Select</h1>
+            <a href="/"><h1 class="logo">Character Select</h1></a>
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
