--- a/views/support.ejs
+++ b/views/support.ejs
@@ -17,7 +17,7 @@
 		<!--Navigation--> 
 		<section class="navbar">
 			<div class="container flex">
-				<h1 class="logo">Character Select</h1>
+				<a href="/"><h1 class="logo">Character Select</h1></a>
 				<nav>
 					<ul>
 						<li><a href="/">Home</a></li>
