Added new Continue As Guest button on signup page that routes to login/?Guest. Passed in new arguments on auth controller for getLogin method to allow for query rendering on login page. Currently work in progress.

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,6 +34,7 @@
                   </form>
                   <h6>Already have an account?</h6>
                   <a href="login" class="btn btn-primary">Login</a>
+                  <a href="login/?guest" class="btn btn-primary">Continue As Guest</a>
             </section>
         </div>
     </main>
