added comment for clarity

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
       <% }) %> <% } %>
 
       <% if (req.query.guest !== undefined) { %>  
-        
+      <!--Conditional Rendering-->
         <form action="/login" method="POST">
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label"
