Fixed padding issue on signup page.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -507,6 +507,10 @@ header {
           width: 100px;
      }
 
+     .btn-primary {
+          margin: 10px;
+     }
+
      .logo{
           font-size: 20px;
      }
