--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<title>Clothing Store</title>
+		
+		<title>Character Select</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="/css/normalize.css">
