--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Character Select</title>
+    <title>Character Select - Tops</title>
 
     <!-- external CSS link -->
 	<link rel="stylesheet" href="/css/normalize.css">
