Added new direnv and flake.nix file for installation of dependencies through nix. Performed general formatting on all files. Added new bottom class to bottoms.ejs spans being generated to resolve image overflow issue. Isolated bottoms images and set static height to eliminate any chance of overflow. Responsiveness is still fine.

--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -1,10 +1,10 @@
- .loader {
+.loader {
   font-size: 20px;
   color: #333;
 }
 
 .loader::after {
-  content: '\2026';
+  content: "\2026";
   display: inline-block;
   overflow: hidden;
   vertical-align: bottom;
@@ -16,4 +16,5 @@
   to {
     width: 1.25em;
   }
-} 
+}
+
