--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 
 /* Box Model Hack */
 * {
-     box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Clear fix hack */
 .clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
 
 .clear {
-	clear: both;
+  clear: both;
 }
 
 /******************************************
@@ -26,45 +24,43 @@
 /*******************************************/
 
 body {
-     font-family: 'VT323' , sans-serif;
-     color: #333;
+  font-family: "VT323", sans-serif;
+  color: #333;
 }
 
 ul {
-     list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-     text-decoration: none;
-     color: #333
+  text-decoration: none;
+  color: #333;
 }
 
 p {
-     margin: 10px 0
+  margin: 10px 0;
 }
 
-img, object {
-     width: 25%;
+img,
+object {
+  width: 25%;
 }
 
 h1,
 h2 {
-     font-weight: 300;
-     line-height: 1.2;
-     margin: 10px 0
+  font-weight: 300;
+  line-height: 1.2;
+  margin: 10px 0;
 }
-
-
 
 /******************************************
 /* LAYOUT
 /*******************************************/
 header {
-
 }
 
- .footer.flex {
-     height: 10%;
+.footer.flex {
+  height: 10%;
 }
 
 /******************************************
@@ -75,259 +71,259 @@ header {
 /* Utilities
 /*******************************************/
 
-   .flex {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     height: 100%;
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
-   .btn {
-     text-transform: uppercase;
-   } 
-    
-   .btn:hover .btn-slide-show-text1 {
-     margin-left: 65px;
-   }
+.btn {
+  text-transform: uppercase;
+}
 
-   .enable-scroll {
-     overflow-y: scroll;
-     inset: 0;
-   }
+.btn:hover .btn-slide-show-text1 {
+  margin-left: 65px;
+}
 
-   .disable-scroll {
-     overflow: hidden;
-   }
-    
-   .btn-pushable {
-     padding: 15px;
-     margin-right: 5px;
-     height: 50px;
-     width: 180px;
-     border: none;
-     outline: none;
-     color: rgb(255, 255, 255);
-     font-family: inherit;
-     border-radius: 3px;
-   } 
-    
-   .btn-pushable:hover {
-     transition: all 0.1s ease-in 0s;
-   } 
-    
-   .btn-pushable:active {
-     transform: translateY(4px);
-     border-bottom-width: 2px;
-     box-shadow: none;
-   } 
-    
-   .btn-pushable--black {
-     background: rgb(51, 51, 51);
-     box-shadow: rgb(51, 51, 51) 0px 6px 0px;
-     border-bottom: 3px solid rgb(34, 34, 34);
-   } 
-    
-   .btn-pushable--black:hover {
-     background: rgb(34, 34, 34);
-     box-shadow: rgb(34, 34, 34) 0px 4px 1px;
-     border-bottom: 3px solid rgb(17, 17, 17);
-   } 
-    
+.enable-scroll {
+  overflow-y: scroll;
+  inset: 0;
+}
 
-   .btn-bottom-stripe {
-     border: 0px;
-     background: rgb(255, 255, 255);
-     font-style: inherit;
-     font-variant: inherit;
-     font-weight: inherit;
-     font-stretch: inherit;
-     font-size: inherit;
-     font-family: inherit;
-     line-height: normal;
-     cursor: pointer;
-     display: block;
-     text-decoration: none;
-     text-transform: uppercase;
-     padding: 16px 56px 22px;
-     border-radius: 6px;
-     margin: 0px 0px 16px;
-     transition: all 0.5s ease 0s;
-     overflow: hidden;
-     position: relative;
-   } 
-    
-   .btn-bottom-stripe::after {
-     content: "";
-     display: block;
-     height: 7px;
-     width: 100%;
-     backface-visibility: hidden;
-     position: absolute;
-     left: 0px;
-     bottom: 0px;
-     background-size: 7px 7px;
-   } 
-    
-   .btn-bottom-stripe:hover {
-     color: rgb(255, 255, 255);
-   } 
-    
-   .btn-bottom-stripe:hover::after {
-     background-image: repeating-linear-gradient(45deg, rgb(255, 255, 255), rgb(255, 255, 255) 1px, transparent 2px, transparent 5px);
-     animation: 12s linear 0s infinite normal forwards running stripe-slide;
-   } 
-    
-   .btn-bottom-stripe--black {
-     color: rgb(51, 51, 51);
-     border: 2px solid rgb(51, 51, 51);
-   } 
-    
-   .btn-bottom-stripe--black::after {
-     border-top: 2px solid rgb(51, 51, 51);
-     background-image: repeating-linear-gradient(45deg, rgb(51, 51, 51), rgb(51, 51, 51) 1px, transparent 2px, transparent 5px);
-   } 
-    
-   .btn-bottom-stripe--black:hover {
-     background-color: rgb(51, 51, 51);
-   } 
-    
-    
+.disable-scroll {
+  overflow: hidden;
+}
 
-   .grid {
-     display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     gap: 20px;
-     justify-content: center;
-     align-items: center;
-   }
+.btn-pushable {
+  padding: 15px;
+  margin-right: 5px;
+  height: 50px;
+  width: 180px;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  font-family: inherit;
+  border-radius: 3px;
+}
 
-   .container {
-     max-width: 1100px;
-     margin: 0 auto;
-     /* overflow: auto; */
-     padding: 0 10px;
+.btn-pushable:hover {
+  transition: all 0.1s ease-in 0s;
+}
+
+.btn-pushable:active {
+  transform: translateY(4px);
+  border-bottom-width: 2px;
+  box-shadow: none;
+}
+
+.btn-pushable--black {
+  background: rgb(51, 51, 51);
+  box-shadow: rgb(51, 51, 51) 0px 6px 0px;
+  border-bottom: 3px solid rgb(34, 34, 34);
+}
+
+.btn-pushable--black:hover {
+  background: rgb(34, 34, 34);
+  box-shadow: rgb(34, 34, 34) 0px 4px 1px;
+  border-bottom: 3px solid rgb(17, 17, 17);
+}
+
+.btn-bottom-stripe {
+  border: 0px;
+  background: rgb(255, 255, 255);
+  font-style: inherit;
+  font-variant: inherit;
+  font-weight: inherit;
+  font-stretch: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  line-height: normal;
+  cursor: pointer;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 16px 56px 22px;
+  border-radius: 6px;
+  margin: 0px 0px 16px;
+  transition: all 0.5s ease 0s;
+  overflow: hidden;
+  position: relative;
+}
+
+.btn-bottom-stripe::after {
+  content: "";
+  display: block;
+  height: 7px;
+  width: 100%;
+  backface-visibility: hidden;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  background-size: 7px 7px;
+}
+
+.btn-bottom-stripe:hover {
+  color: rgb(255, 255, 255);
+}
+
+.btn-bottom-stripe:hover::after {
+  background-image: repeating-linear-gradient(
+    45deg,
+    rgb(255, 255, 255),
+    rgb(255, 255, 255) 1px,
+    transparent 2px,
+    transparent 5px
+  );
+  animation: 12s linear 0s infinite normal forwards running stripe-slide;
+}
+
+.btn-bottom-stripe--black {
+  color: rgb(51, 51, 51);
+  border: 2px solid rgb(51, 51, 51);
+}
+
+.btn-bottom-stripe--black::after {
+  border-top: 2px solid rgb(51, 51, 51);
+  background-image: repeating-linear-gradient(
+    45deg,
+    rgb(51, 51, 51),
+    rgb(51, 51, 51) 1px,
+    transparent 2px,
+    transparent 5px
+  );
+}
+
+.btn-bottom-stripe--black:hover {
+  background-color: rgb(51, 51, 51);
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  /* overflow: auto; */
+  padding: 0 10px;
 }
 
 .main {
-     opacity: 0;
-     display: none;
-     transition: opacity 1s ease-in;
-   }
-
-   .mini-cart {
-     position: fixed;
-     top: 7%;
-     left: 100%;
-     width: 100%;
-     min-height: 100vh;
-     display: block;
-     z-index: 98;
-     padding-top: 120px;
-     background-color: #FBFAE6;
-     color: #171718;
-     transition: 0.4s;
-
+  opacity: 0;
+  display: none;
+  transition: opacity 1s ease-in;
 }
 
+.mini-cart {
+  position: fixed;
+  top: 7%;
+  left: 100%;
+  width: 100%;
+  min-height: 100vh;
+  display: block;
+  z-index: 98;
+  padding-top: 120px;
+  background-color: #fbfae6;
+  color: #171718;
+  transition: 0.4s;
+}
 
 .mini-cart.is-active {
-     left: 0;
+  left: 0;
 }
 
 .mini-cart ul {
-     padding: 0 50px;
+  padding: 0 50px;
 }
 
-
-.mini-cart ul li  {
-     display: block;
-     text-align: center;
-     width: 100%;
-     max-width: 500px;
-     margin: 0 auto 16px;
-     padding: 12px 16px;
-     border: solid 2px black; 
+.mini-cart ul li {
+  display: block;
+  text-align: center;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto 16px;
+  padding: 12px 16px;
+  border: solid 2px black;
 }
 
 .mini-cart .grid {
-
-     display: grid;
-     grid-template-columns: repeat(1, 1fr);
-     gap: 10px;
-     justify-content: center;
-     align-items: center;
-     
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 .mini-cart .item {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
 
 .mini-cart div {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     padding: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px;
 }
-
 
 /******************************************
 /* Navbar
 /*******************************************/
 
 .navbar {
-     background-color: black;
-     color: #fff;
-     height: 70px;
-
+  background-color: black;
+  color: #fff;
+  height: 70px;
 }
 
 .navbar .flex {
-     justify-content: space-between;
+  justify-content: space-between;
 }
 
 .navbar ul {
-     display: flex;
-     padding: 0 0 0 10px;
+  display: flex;
+  padding: 0 0 0 10px;
 }
 
 .navbar a {
-     color: #fff;
-     padding: 10px;
-     margin: 0 5px;
+  color: #fff;
+  padding: 10px;
+  margin: 0 5px;
 }
 
 .navbar a:hover {
-     border-bottom: 2px white solid;
+  border-bottom: 2px white solid;
 }
 
 .navbar img {
-     display: inline-block;
-     height: 30px;
-     width: 30px;
-     object-fit: cover;
-     object-position: center;
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  object-fit: cover;
+  object-position: center;
 }
-
 
 /******************************************
 /* Selections
 /*******************************************/
 
 .select {
-     width: 100%;
-     height: 750px;
-     justify-content: space-around;
+  width: 100%;
+  height: 750px;
+  justify-content: space-around;
 }
 
 .select div {
-     border: 1px solid black;
-     width: 20%;
-     height: 50%;
-     box-shadow: 10px 10px 1px;
+  border: 1px solid black;
+  width: 20%;
+  height: 50%;
+  box-shadow: 10px 10px 1px;
 }
 
 /* .select div:hover {
@@ -336,226 +332,208 @@ header {
 } */
 
 .select .flex {
-     flex-direction: column;
-     justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-around;
 }
-
-
 
 /******************************************
 /* Tops/Bottoms
 /*******************************************/
 
- .grid div {
-     border: solid 3px #A8A8A8;
-     width: 100%;
-     height: 500px;
-     margin-top: 20px;
- }
+.grid div {
+  border: solid 3px #a8a8a8;
+  width: 100%;
+  height: 500px;
+  margin-top: 20px;
+}
 
- .tops, .bottoms, .product{
-     color: #fff;
-     background-color:#171718;
- }
+.tops,
+.bottoms,
+.product {
+  color: #fff;
+  background-color: #171718;
+}
 
- .products {
-     width: 50%;
-     height: 50%;
-     margin-top: 40px;
-     flex-wrap: wrap;
- }
+.products {
+  width: 50%;
+  height: 100%;
+  margin-top: 40px;
+  flex-wrap: wrap;
+}
 
- .products .bottom-name {
-     margin-bottom: 20px;
+.products .bottom-name {
+  margin-bottom: 20px;
 }
 
 .bottom-form {
-     margin-top: 20px;
+  margin-top: 20px;
 }
 
- .products img {
-     width: 100%;
-     height: 100%;
- }
+.products img {
+  width: 100%;
+  height: 100%;
+}
 
- #size {
-     width: 50%;
-     margin-left: 25%;
- }
+.products.bottom img {
+	width: 100%;
+	height: 220px;
+}
 
- #size option {
-     text-align: center;
- }
+#size {
+  width: 50%;
+  margin-left: 25%;
+}
 
- .container .flex {
-     align-items: flex-start;
- }
+#size option {
+  text-align: center;
+}
 
- 
+.container .flex {
+  align-items: flex-start;
+}
 
 /******************************************
 /* Support
 /*******************************************/
 .flex.support {
-     text-align: center;
+  text-align: center;
 }
-
 
 /******************************************
 /* Alert Box
 /*******************************************/
 
-
 .alert-success {
-     display: flex;
-     position: fixed;
-     top: 6%;
-     right: 78%;
-     text-align: center;
-     width: 100%;
-     max-width: 350px;
-     margin: 0 auto 16px;
-     padding: 12px 16px;
-     background-color: white;
-     color: black;
-     border: solid 5px #1b1e23;
-     border-radius: 5%;
-     transition: 0.2s;
-    
+  display: flex;
+  position: fixed;
+  top: 6%;
+  right: 78%;
+  text-align: center;
+  width: 100%;
+  max-width: 350px;
+  margin: 0 auto 16px;
+  padding: 12px 16px;
+  background-color: white;
+  color: black;
+  border: solid 5px #1b1e23;
+  border-radius: 5%;
+  transition: 0.2s;
 }
 
 .alert-success i {
-     height: 5%;
-     margin-left: 13px;
+  height: 5%;
+  margin-left: 13px;
 }
 
-
- .alert-success.hidden {
-     right: 100%;
+.alert-success.hidden {
+  right: 100%;
 }
-
-
 
 /******************************************
 /* Product Page
 /*******************************************/
 
 .product-single {
-     display: flex;
-     align-items: center;
-     justify-content: space-around;
-     flex-wrap: wrap;
-     padding-top: 20px;
-     
-
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-top: 20px;
 }
 .product-single img {
-     height: 100%;
-     width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 .product-single .info {
-     display: flex;
-     flex-direction: column;
-     align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-
 
 .product-single #size {
-     width: 100%;
-     margin-left: 0
- }
-
-
-.product-name {
-     white-space: nowrap;
+  width: 100%;
+  margin-left: 0;
 }
 
+.product-name {
+  white-space: nowrap;
+}
 
 /******************************************
 /* Responsive Design
 /*******************************************/
 
 @media screen and (max-width: 1350px) {
-
-     .alert-success {
-          right: 70%;
-     }
-     
+  .alert-success {
+    right: 70%;
+  }
 }
 
-
 @media screen and (max-width: 980px) {
-     .flex.categories, .flex.support-container {
-          flex-direction: column;
-          gap: 40px;
-          margin-top: 50px;
-          
-     }
-     
-     
-     .select {
-          height: 1100px;
-     }
+  .flex.categories,
+  .flex.support-container {
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 50px;
+  }
 
-     .select div {
-          width: 50%;
-     }
+  .select {
+    height: 1100px;
+  }
 
-     .btn-pushable, .btn-primary {
-          width: 100px;
-     }
+  .select div {
+    width: 50%;
+  }
 
-     .btn-primary {
-          margin: 10px;
-     }
+  .btn-pushable,
+  .btn-primary {
+    width: 100px;
+  }
 
-     .logo{
-          font-size: 20px;
-     }
+  .btn-primary {
+    margin: 10px;
+  }
 
-     .products.flex span {
-          white-space: nowrap;
-     }
+  .logo {
+    font-size: 20px;
+  }
 
-     .alert-success {
-          right: 60%;
-     }
+  .products.flex span {
+    white-space: nowrap;
+  }
 
-   }
+  .alert-success {
+    right: 60%;
+  }
+}
 
-   @media screen and (max-width: 720px) {
-     .grid {
-          grid-template-columns: repeat(1, 1fr);
-     }
+@media screen and (max-width: 720px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
 
+  .product-name,
+  .product-price {
+    font-size: 0.97rem;
+  }
 
-     .product-name, .product-price {
-          font-size: 0.97rem;
-      }
+  .alert-success {
+    right: 50%;
+  }
+}
 
+@media screen and (max-width: 500px) {
+  .logo {
+    white-space: nowrap;
+  }
 
-     .alert-success {
-          right: 50%;
-     }
+  .mini-cart ul li span {
+    white-space: nowrap;
+    font-size: 0.7rem;
+  }
 
-
-   }
-
-   @media screen and (max-width: 500px) {
-     .logo { 
-          white-space: nowrap;
-     }
-
-     .mini-cart ul li span {
-          white-space: nowrap;
-          font-size: 0.7rem;
-     }
-
-     .alert-success {
-          right: 20%;
-     }
-   }
-
-   
+  .alert-success {
+    right: 20%;
+  }
+}
